Fixed custom title overlap with thank you button on component (BT-1213)

--- a/css/style.scss
+++ b/css/style.scss
@@ -153,6 +153,14 @@
     }
 
     .panel-heading {
+        .custom-header-title, .header-title {
+            width: calc(100% - 130px);
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
         .thank-you--button {
             position: absolute;
             right: 7px;
